Update full database URL to use clean URL format without .html extension

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,4 @@
 {
-  "name": "whydrs-database",
-  "version": 2,
-  "public": true,
-  "github": {
-    "enabled": true,
-    "silent": false
-  },
-  "builds": [
-    { "src": "**/*", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/$1" }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 } 
